--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -1,7 +1,14 @@
 <script type="module">
-  Array.from(document.getElementsByClassName("language-mermaid")).forEach(
-    (element) => element.classList.add("mermaid")
-  );
+  // Extract contents of <code class="language-mermaid"> into <pre class="mermaid">
+  // Source: https://css-tricks.com/making-mermaid-diagrams-in-markdown/
+  for (let element of document.querySelectorAll(
+    "pre.mermaid, pre>code.language-mermaid"
+  )) {
+    if (element.tagName === "CODE") {
+      element = element.parentElement;
+    }
+    element.outerHTML = /*html*/ `<div class="mermaid">${element.textContent}</div>`;
+  }
   import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
   mermaid.initialize({ startOnLoad: true });
 </script>
