--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -1,8 +1,13 @@
 <script type="module">
-  // Add class to trigger mermaid processing
-  // Source: https://github.com/orgs/community/discussions/65040#discussioncomment-12192375
-  for (const element of document.querySelectorAll(".language-mermaid")) {
-    element.classList.add("mermaid");
+  // Extract contents of markdown mermaid blocks into <div class="mermaid">
+  // Source: https://css-tricks.com/making-mermaid-diagrams-in-markdown/
+  for (let element of document.querySelectorAll(
+    "pre.mermaid, pre>code.language-mermaid"
+  )) {
+    if (element.tagName === "CODE") {
+      element = element.parentElement;
+    }
+    element.outerHTML = /*html*/ `<div class="mermaid">${element.textContent}</div>`;
   }
   import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
   mermaid.initialize({ startOnLoad: true });
