--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,12 +2,12 @@
     {%- if page.prev -%}
     <a href="{{ page.prev }}">← Previous</a>
     {%- else -%}
-    <i>None</i>
+    <i>Previous</i>
     {%- endif -%}
     <span>Navigation</span>
     {%- if page.next -%}
     <a href="{{ page.next }}">Next →</a>
     {%- else -%}
-    <i>None</i>
+    <i>Next</i>
     {%- endif -%}
 </div>
