--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -10,6 +10,5 @@
     element.outerHTML = /*html*/ `<div class="mermaid">${element.textContent}</div>`;
   }
   import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
-  mermaid.initialize({ startOnLoad: true,
-    theme: 'base' });
+  mermaid.initialize({ startOnLoad: true, theme: "dark" });
 </script>
