--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,9 @@ layout: base
 <article class="post">
     <header class="post-header">
         <h1 class="post-title">{{ page.title | escape }}</h1>
-        {%- if page.next or page.prev include navigation.html -%}
+        {% if page.next or page.prev %}
+            {%- include navigation.html -%}
+        {% endif %}
     </header>
 
     <div class="post-content">{{ content }}</div>
