--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,15 @@ layout: base
 
 <article class="post">
     <header class="post-header">
-        <h1 class="post-title">{{ page.title | escape }}</h1>
         {% if page.next or page.prev %}
             {%- include navigation.html -%}
         {% endif %}
+        <h1 class="post-title">{{ page.title | escape }}</h1>
     </header>
 
     <div class="post-content">{{ content }}</div>
+
+    {% if page.next or page.prev %}
+        {%- include navigation.html -%}
+    {% endif %}
 </article>
